Github Pages Fix

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Three.js Project</title>
   <!-- Link to the bundled Three.js script -->
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script type = "module" src="script.js" defer></script>
 </head>
 <body>
