--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <script type = "module" src="script.js" defer></script>
 </head>
 <body>
-<div id="container"></div>
+<div id="container">
+</div>
   <!-- Container for the 3D scene -->
 </body>
 </html>
