--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Three.js Project</title>
+  <title>3D Tic Tac Toe</title>
   <!-- Link to the bundled Three.js script -->
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -12,6 +12,7 @@
 <body>
 <div id="container">
 </div>
+<div id = "label"></div>
   <!-- Container for the 3D scene -->
 </body>
 </html>
