--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Link to the bundled Three.js script -->
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script type = "module" src="3DTicTacToe.js" defer></script>
   <script type = "module" src="script.js" defer></script>
 </head>
 <body>
