added play button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
 <div id="container">
 </div>
-<div id = "label"></div>
+<div id = "bar">
+  <div id = "label"></div>
+  <button id = "playBtn">Play</button>
+</div>
+
   <!-- Container for the 3D scene -->
 </body>
 </html>
