--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <script type = "module" src="script.js" defer></script>
 </head>
 <body>
-<div id="container">
-</div>
-<div id = "bar">
-  <div id = "label"></div>
-  <button id = "playBtn">Play</button>
-</div>
+<!-- Container for the 3D scene -->
+  <div id="container">
+  </div>
 
-  <!-- Container for the 3D scene -->
+  <div id = "bar">
+    <div id = "hoveredLabel"></div>
+    <div id = "selectedLabel">No Point Selected</div>
+    <button id = "playBtn">Play</button>
+  </div>
 </body>
 </html>
