--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <!-- Container for the 3D scene -->
   <div id="container">
   </div>
-
+  <div id="restartContainer">
+    <button id="restartBtn">Restart</button>
+  </div>
   <div id = "bar">
     <div id = "hoveredLabel"></div>
     <div id = "selectedLabel">No Point Selected</div>
